--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+* {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    outline: none;
+    color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper {
+    margin: 100px auto;
+    max-width: 50%;
+    min-width: 750px;
+}
+
+.block-join {
+    width: 250px;
+    margin: 0 auto;
+}
+
+.block-join button {
+    cursor: pointer;
+    padding: 5px;
+    width: 100%;
+    font-weight: bold;
+    margin-top: 7px;
+}
+
+.block-join input {
+    width: 100%;
+    font-size: 20px;
+    padding: 6px 12px;
 }
